[Fix] Fixed autoRegister support in Java 11+
Ref: https://gitlab.com/CDAGaming/CraftPresence/-/issues/138

Notes:
- Fixes missing methods to ensure successfull reflection.
- autoRegister not working will no longer cause the entire mod to stop working. Now also provides helpful info, if the error is a fixable issue on the users end